Fixed alignment for the streaming links

--- a/_sass/styles/_menu.scss
+++ b/_sass/styles/_menu.scss
@@ -19,7 +19,7 @@
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    padding: 0 1rem;
+    padding: 0 calc(5% + 18px);
     z-index: 200;
 
     @include mobile {
